--- a/index.html
+++ b/index.html
@@ -8,57 +8,66 @@
     <link rel="icon" href="Imagenes/Logo icono.png">
 </head>
 <body>
-    <!-- BARRA DE NAVEGACION -->
-    <header id="Tienda de belleza femenina ">
-        <nav>
-            <section class="Contenedor-nav">
-                <div>
-                    <h1>MAKE-UP STORE</h1>  
 
-                </div>
-                <img src="Imagenes/Logotipo.png" alt="Logo de tienda">
-                <h2>Encuentra una gran de variedad de productos para resaltar tu belleza </h2>
-            </section>
+    <header>
+        <nav>              
+                    <div class="container-icon">
+                        <div class="container-logotipo">
+                            <h1>MAKE-UP STORE</h1> 
+                        <img src="Imagenes/Logotipo.png" alt="Logo de tienda">    
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-cart">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 1 0-7.5 0v4.5m11.356-1.993 1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 0 1-1.12-1.243l1.264-12A1.125 1.125 0 0 1 5.513 7.5h12.974c.576 0 1.059.435 1.119 1.007ZM8.625 10.5a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Zm7.5 0a.375.375 0 1 1-.75 0 .375.375 0 0 1 .75 0Z" />
+                          </svg>
+                        
+                </div>               
+            </div>
         </nav>
-        <div class="contenedor">
-        <section class="contenido-header">
-            <img src="../Pagina-Web/Imagenes/Base Aqua.jpg" alt="Base Aqua" >
-            <img src="../Pagina-Web/Imagenes/Base Nude.jpg" alt="Base Nude">
-            <img src="../Pagina-Web/Imagenes/Base Stay Matte.jpg" alt="Base Stay">
-            <img src="../Pagina-Web/Imagenes/Bronzer.jpg" alt="Bronzer en barra cremoso">
-            <img src="../Pagina-Web/Imagenes/Bronzer en polvo.jpg" alt="Bronzer en polvo">
-            <img src="../Pagina-Web/Imagenes/Bronzer matte.jpg" alt="Bronzer matte">
-            <img src="../Pagina-Web/Imagenes/Contorno en barra.jpg" alt="Contorno en barra">
-            <img src="../Pagina-Web/Imagenes/Paleta de contorno.jpg" alt="Paleta de contorno one step">
-            <img src="../Pagina-Web/Imagenes/Contorno floral.jpg" alt="Kit de resaltado y contorno Floral ">
-            <img src="../Pagina-Web/Imagenes/Iluminador en barra.jpg" alt="Iluminador en barra cremoso">
-            <img src="Imagenes/Iluminador siren.jpg" alt="Iluminador siren glow">
-            <img src="Imagenes/Polvos compactos.jpg" alt="Polvos compactos">
-            <img src="Imagenes/Polvo suelto.jpg" alt="Polvos sueltos">
-            <img src="Imagenes/Rubor liquido.jpg" alt="Rubor Blush Sponge">
-            <img src="Imagenes/Paleta de rubor.jpg" alt="Paleta de rubores">
-            <img src="Imagenes/Fijador.jpg" alt="Fijador de maquillaje">
-            <img src="Imagenes/Primer.jpg" alt="Primer Aqua">
-            <img src="Imagenes/Delineador en gel.jpg" alt="Delineador de ojos en gel">
-            <img src="Imagenes/Delineador en plumon.jpg" alt="Delineador en plumon cafe">
-            <img src="Imagenes/Delineador liquido.jpg" alt="Delineador liquido ">
-            <img src="Imagenes/Fijador de cejas.jpg" alt="Fijador de cejas">
-            <img src="Imagenes/Paleta de cejas.jpg" alt="Paleta para cejas en varios tonos">
-            <img src="Imagenes/Pomada de cejas.jpg" alt="Pomada para cejas">
-            <img src="Imagenes/Paleta de sombras.jpg" alt="Paleta de sombras con 88 sombras">
-            <img src="Imagenes/Paleta de sombras mixta.jpg" alt="Paleta de sombras con 12 tonos, 6 mates y 6 satinados">
-            <img src="Imagenes/Encrespador.jpg" alt="Encrespador para pestañas">
-            <img src="Imagenes/Pestañina vogue.jpg" alt="Pestañina vogue amor a primera vista">
-            <img src="Imagenes/Pestañina Lash Sensational.jpeg" alt="Pestañina Lash Sensational a prueba de agua ">
-            <img src="Imagenes/Lapiz labial.jpg" alt="Lapiz labial delineador">
-            <img src="Imagenes/Brillo Voluminizador.jpg" alt="Brillo para labios para dar mas volumen">
-            <img src="Imagenes/Lip gloss.jpg" alt="Gloss con color">
-            <img src="Imagenes/Tinta para labios.jpg" alt="Tintas para labios">
-            <img src="Imagenes/Brochas.jpg" alt="Kit de 10 brochas y aplicadores ">
-
-
-        </section>
-        </div>
     </header>
+
+
+<div class="contenedor">
+<section class="contenido-items">
+    <h2>Encuentra una gran de variedad de productos para resaltar tu belleza </h2>
+    <img src="../Pagina-Web/Imagenes/Base Aqua.jpg" alt="Base Aqua" >
+    <img src="../Pagina-Web/Imagenes/Base Nude.jpg" alt="Base Nude">
+    <img src="../Pagina-Web/Imagenes/Base Stay Matte.jpg" alt="Base Stay">
+    <img src="../Pagina-Web/Imagenes/Bronzer.jpg" alt="Bronzer en barra cremoso">
+    <img src="../Pagina-Web/Imagenes/Bronzer en polvo.jpg" alt="Bronzer en polvo">
+    <img src="../Pagina-Web/Imagenes/Bronzer matte.jpg" alt="Bronzer matte">
+    <img src="../Pagina-Web/Imagenes/Contorno en barra.jpg" alt="Contorno en barra">
+    <img src="../Pagina-Web/Imagenes/Paleta de contorno.jpg" alt="Paleta de contorno one step">
+    <img src="../Pagina-Web/Imagenes/Contorno floral.jpg" alt="Kit de resaltado y contorno Floral ">
+    <img src="../Pagina-Web/Imagenes/Iluminador en barra.jpg" alt="Iluminador en barra cremoso">
+    <img src="Imagenes/Iluminador siren.jpg" alt="Iluminador siren glow">
+    <img src="Imagenes/Polvos compactos.jpg" alt="Polvos compactos">
+    <img src="Imagenes/Polvo suelto.jpg" alt="Polvos sueltos">
+    <img src="Imagenes/Rubor liquido.jpg" alt="Rubor Blush Sponge">
+    <img src="Imagenes/Paleta de rubor.jpg" alt="Paleta de rubores">
+    <img src="Imagenes/Fijador.jpg" alt="Fijador de maquillaje">
+    <img src="Imagenes/Primer.jpg" alt="Primer Aqua">
+    <img src="Imagenes/Delineador en gel.jpg" alt="Delineador de ojos en gel">
+    <img src="Imagenes/Delineador en plumon.jpg" alt="Delineador en plumon cafe">
+    <img src="Imagenes/Delineador liquido.jpg" alt="Delineador liquido ">
+    <img src="Imagenes/Fijador de cejas.jpg" alt="Fijador de cejas">
+    <img src="Imagenes/Paleta de cejas.jpg" alt="Paleta para cejas en varios tonos">
+    <img src="Imagenes/Pomada de cejas.jpg" alt="Pomada para cejas">
+    <img src="Imagenes/Paleta de sombras.jpg" alt="Paleta de sombras con 88 sombras">
+    <img src="Imagenes/Paleta de sombras mixta.jpg" alt="Paleta de sombras con 12 tonos, 6 mates y 6 satinados">
+    <img src="Imagenes/Encrespador.jpg" alt="Encrespador para pestañas">
+    <img src="Imagenes/Pestañina vogue.jpg" alt="Pestañina vogue amor a primera vista">
+    <img src="Imagenes/Pestañina Lash Sensational.jpeg" alt="Pestañina Lash Sensational a prueba de agua ">
+    <img src="Imagenes/Lapiz labial.jpg" alt="Lapiz labial delineador">
+    <img src="Imagenes/Brillo Voluminizador.jpg" alt="Brillo para labios para dar mas volumen">
+    <img src="Imagenes/Lip gloss.jpg" alt="Gloss con color">
+    <img src="Imagenes/Tinta para labios.jpg" alt="Tintas para labios">
+    <img src="Imagenes/Brochas.jpg" alt="Kit de 10 brochas y aplicadores ">
+</section>
+    <div class="info-producto">
+        <h2>Base Aqua</h2>
+        <p class="precio">$35.000</p>
+        <button>Añadir al carrito</button>
+
+    </div>
+</div>
 </body>
 </html>
