--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="../Pagina-Web/css/style.css">
     <link rel="icon" href="Imagenes/Logo icono.png">
     <script src="../Pagina-Web/js/funciones-js.js"></script>
+   
 </head>
+
 <body>
 
     <section id="encabezado " class="encabezado">
@@ -1175,27 +1177,20 @@
     <div class="partFooter">
         <h4>Contacto</h4>
         <div class="contact">
-            <i class="fa-solid fa-phone"></i>
+            <img src="./Imagenes/WhatsApp.png" alt="">
             <p>(+57) 313 230 7459</p>
         </div>
         <div class="contact">
-            <i class="fa-solid fa-envelope"></i>
+            <img src="./Imagenes/E-mail.png" alt="">
             <p>Make-up@gmail.com</p>
         </div>
         <div class="contact">
-            <i class="fa-solid fa-user"></i>
+           <img src="./Imagenes/Facebook.png" alt="">
             <p>Make-up Store</p>
         </div>
        
     </div>
-    <div class="partFooter">
-        <h4>Redes Sociales</h4>
-        <div class="social-media">            
-            <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-            <a href="https://x.com/iniciarsesion?lang=es" target="_blank"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-        </div>
-    </div>
+   
 </footer>
 </div>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
